+ Provide the ability for people moving a topic to set how long the topic redirection notice stays in place for. (MoveTopic.php, MoveTopic.template.php, Subs-Scheduled.php, index.english.php) ! Miscellaneous layout bug in the move topic template, due to overwide dd forcing wrapping rather than floating. (sections.css) ! Miscellaneous bugs in the imperative scheduled system (Load.php, Subs-Scheduled.php) ! The recount-reports function is sometimes going to be run when permissions aren't loaded (namely during scheduled/imperative tasks), make sure the mod cache is loaded in that circumstance. (ModerationCenter.php)

--- a/Themes/default/skins/sections.css
+++ b/Themes/default/skins/sections.css
@@ -730,8 +730,6 @@ dl.poll_options
 	margin-bottom: 0
 	&.settings dt
 		width: 40%
-	&.settings dd
-		width: 59%
 
 .move_topic
 	width: 710px
